# Lender

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md  rustfmt.toml
.github/workflows/: check_lint.yml  rust.yml  test.yml
lender/: CONTRIBUTING.md  Cargo.toml  LICENSE-MIT.txt  README.md  rustfmt.toml
lender-derive/: Cargo.toml  LICENSE-MIT.txt  README.md
lender-derive/src/: lib.rs
lender/src/: higher_order.rs  lib.rs  sources.rs
lender/src/adapters/: chain.rs  chunk.rs  chunky.rs  cloned.rs  copied.rs  cycle.rs  enumerate.rs  filter.rs  filter_map.rs  flatten.rs  fuse.rs  inspect.rs  intersperse.rs  iter.rs  map.rs  map_into_iter.rs  map_while.rs  mod.rs  mutate.rs  owned.rs  peekable.rs  rev.rs  scan.rs  skip.rs  skip_while.rs  step_by.rs  take.rs  take_while.rs  zip.rs
lender/src/fallible_adapters/: chain.rs  chunk.rs  chunky.rs  cloned.rs  convert.rs  copied.rs  cycle.rs  enumerate.rs  filter.rs  filter_map.rs  flatten.rs  fuse.rs  inspect.rs  intersperse.rs  into_fallible.rs  iter.rs  map.rs  map_err.rs  map_into_iter.rs  map_while.rs  mod.rs  mutate.rs  non_fallible_adapter.rs  owned.rs  peekable.rs  rev.rs  scan.rs  skip.rs  skip_while.rs  step_by.rs  take.rs  take_while.rs  zip.rs
lender/src/fallible_sources/: empty.rs  from_fn.rs  from_iter.rs  from_iter_ref.rs  mod.rs  once.rs  once_with.rs  repeat.rs  repeat_with.rs
lender/src/sources/: empty.rs  from_fn.rs  from_iter.rs  from_iter_ref.rs  mod.rs  once.rs  once_with.rs  repeat.rs  repeat_with.rs  windows_mut.rs
lender/src/traits/: accum.rs  collect.rs  double_ended.rs  exact_size.rs  ext.rs  fallible_lender.rs  lender.rs  marker.rs  mod.rs
lender/tests/: lib.rs  test_adapters.rs  test_adapters_chunk.rs  test_adapters_combine.rs  test_adapters_compose.rs  test_adapters_control.rs  test_adapters_selection.rs  test_adapters_transform.rs  test_double_ended.rs  test_exact_size.rs  test_fallible.rs  test_fallible_adapters.rs  test_fallible_coverage.rs  test_fallible_methods.rs  test_fallible_sources.rs  test_flatten.rs  test_for.rs  test_iterop.rs  test_lib.rs  test_peek.rs  test_peekable.rs  test_sources.rs  test_trait_compliance.rs  test_trait_methods.rs
lender/tests/common/: mod.rs
lender/tests/fail/: chain_invariant.rs  chain_invariant.stderr  chunk_invariant.rs  chunk_invariant.stderr  chunky_invariant.rs  chunky_invariant.stderr  convert_invariant.rs  convert_invariant.stderr  covariant_fallible_lend_invariant.rs  covariant_fallible_lend_invariant.stderr  covariant_lend_fallible_invariant.rs  covariant_lend_fallible_invariant.stderr  covariant_lend_invariant.rs  covariant_lend_invariant.stderr  cycle_invariant.rs  cycle_invariant.stderr  empty_invariant.rs  empty_invariant.stderr  enumerate_invariant.rs  enumerate_invariant.stderr  fallible_empty_invariant.rs  fallible_empty_invariant.stderr  fallible_flatten_invariant.rs  fallible_flatten_invariant.stderr  fallible_intersperse_invariant.rs  fallible_intersperse_invariant.stderr  fallible_once_invariant.rs  fallible_once_invariant.stderr  fallible_peekable_invariant.rs  fallible_peekable_invariant.stderr  filter_invariant.rs  filter_invariant.stderr  filter_map_invariant.rs  filter_map_invariant.stderr  flatten_invariant.rs  flatten_invariant.stderr  from_fn_invariant.rs  from_fn_invariant.stderr  from_iter_invariant.rs  from_iter_invariant.stderr  (+68 more)
src/: higher_order.rs  hkts.rs  impls.rs  lib.rs  sources.rs  try_trait_v2.rs
src/adapters/: chain.rs  chunk.rs  chunky.rs  cloned.rs  copied.rs  cycle.rs  enumerate.rs  filter.rs  filter_map.rs  flatten.rs  fuse.rs  inspect.rs  intersperse.rs  intersperse_with.rs  iter.rs  map.rs  map_into_iter.rs  map_while.rs  mod.rs  mutate.rs  owned.rs  peekable.rs  rev.rs  scan.rs  skip.rs  skip_while.rs  step_by.rs  take.rs  take_while.rs  zip.rs
src/impls/: option.rs
src/sources/: empty.rs  from_fn.rs  from_iter.rs  once.rs  once_with.rs  repeat.rs  repeat_with.rs
src/traits/: accum.rs  collect.rs  double_ended.rs  exact_size.rs  ext.rs  lender.rs  marker.rs  mod.rs
stable_try_trait_v2/: Cargo.toml  README.md
stable_try_trait_v2/src/: lib.rs
tests/: lib.rs
