[package]
name = "lender"
version = "0.1.7"
edition = "2021"
authors = ["Lance Warden <wanderlanz@proton.me>"]
license = "MIT OR Apache-2.0"
description = "iter feature complete(-ish) lending iterator"
repository = "https://github.com/WanderLanz/Lender"
categories = ["rust-patterns", "no-std"]
keywords = ["lending", "iterator"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
