[package]
name = "lender"
authors = [
    "Lance Warden <wanderlanz@proton.me>",
    "Sebastiano Vigna <sebastiano.vigna@gmail.com>",
]
description = "A lending-iterator trait based on higher-rank trait bounds, with full std::iter::Iterator functionality"
version = "0.3.1"
edition = "2021"
repository = "https://github.com/WanderLanz/Lender"
license = "Apache-2.0 OR LGPL-2.1-or-later OR MIT"
readme = "README.md"
categories = ["rust-patterns", "no-std"]
keywords = ["lending", "iterator"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
lender-derive = { version = "0.1.1", optional = true }
stable_try_trait_v2 = { path = "../stable_try_trait_v2", version = "1.75" }

[features]
default = ["derive"]
derive = ["lender-derive"]
