[package]
name = "lender"
authors = [
    "Lance Warden <wanderlanz@proton.me>",
    "Sebastiano Vigna <sebastiano.vigna@unimi.it>",
]
description = "A lending-iterator trait based on higher-rank trait bounds, with full std::iter::Iterator functionality"
version = "0.5.0"
edition = "2024"
repository = "https://github.com/WanderLanz/Lender"
license = "Apache-2.0 OR LGPL-2.1-or-later OR MIT"
readme = "README.md"
categories = ["rust-patterns", "no-std"]
keywords = ["iterator", "lending", "fallible", "hrtb"]
rust-version = "1.85"

[dependencies]
aliasable = "0.1.3"
fallible-iterator = "0.3.0"
lender-derive = { workspace = true, optional = true }
maybe-dangling = "0.1.2"
stable_try_trait_v2 = { workspace = true }

[dev-dependencies]
trybuild = "1.0.111"

[features]
default = ["derive"]
derive = ["lender-derive"]
