[package]
name = "stable_try_trait_v2"
version = "1.75.1"
edition = "2021"
authors = ["Lance Warden <wanderlanz@proton.me>"]
description = "A simple stable implementation of the `Try`, `FromResidual`, and `Residual` traits under the `try_trait_v2` feature."
repository = "https://github.com/WanderLanz/Lender"
license = "Apache-2.0 OR MIT"
categories = ["no-std", "no-std::no-alloc"]
keywords = ["try", "feature", "try_traits", "try_trait", "try_trait_v2"]
